# type_traist_notebook

./: .gitignore  CMakeLists.txt
.github/workflows/: build-ci.yml
cmake/: auto_ctest.cmake  auto_ctest_impl.py  test_definition.txt  type_traist_notebook-config-version.cmake.in  type_traist_notebook-config.cmake.in
include/: convert.hpp  log.hpp  numerics.hpp  pretty_print.hpp  taskflow.framework.hpp.backup  type_traist.hpp  type_traist_notebook.hpp
include/uca/: backend.hpp
test/: CMakeLists.txt  feature_testing.cpp  test.cpp  test_convert.cpp  test_inf.cpp  test_numerics.cpp  test_pretty_print.cpp  test_stl_operator.cpp
